style changes for demo

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="wrapper">
-    <header class="header">
+    <!-- <header class="header">
       <div class="header__inner container">
         <div class="header__main">
           <a class="header__logo" href="#">
@@ -40,10 +40,10 @@
           <button class="header__sign-up btn btn--blue popup-btn">Sign Up</button>
         </div>
       </div>
-    </header>
+    </header> -->
 
     <main>
-      <section class="hero container">
+      <!-- <section class="hero container">
         <div class="hero__content">
           <div class="hero__header">
             <h1 class="hero__title">
@@ -66,7 +66,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <section class="why-dlex">
         <div class="why-dlex__header section-header container">
           <div class="section-header__wrapper">
